Add talks for 3rd day

--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -184,9 +184,8 @@
                 <span class="session-talk"><a class="link" href="papers/a23-ding.pdf">Runtime Encoding Execution in
                         AnalyticDB: Efficient Query Executor for Cloud-native Database</a></span>
                 <span class="session-presenter">Qiaoyi Ding (Alibaba)
-                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+<!--                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button> -->
                 </span>
-
             </div>
 
             <h3 class="time-slot" style="grid-row: time-1200;">12:00pm</h3>
@@ -595,37 +594,46 @@
             <div class="session session-4 track-all" style="grid-column: track-all; grid-row: time-0830 / time-1030;">
                 <h3 class="session-title"><a href="#">Session 7: Query Processing</a></h3>
                 <span class="session-presenter">Chair: Matthias Böhm</span>
-
                 <span class="session-location">(Room: Santa Cruz)</span>
                 <span class="session-time">08:30 - 08:50</span>
                 <span class="session-talk"><a class="link" href="papers/p18-flachs.pdf">The 3D Hash Join: Building On
                         Non-Unique Join Attributes</a></span>
                 <span class="session-presenter">Daniel Flachs (University of Mannheim)*; Magnus Mueller (University of
-                    Mannheim); Guido Moerkotte (University of Mannheim)</span>
+                    Mannheim); Guido Moerkotte (University of Mannheim)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=ni9C1iDs44M">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
                 <span class="session-time">08:50 - 09:10</span>
                 <span class="session-talk"> <a class="link" href="papers/p82-landgraf.pdf">Memory Efficient Scheduling
                         of Query Pipeline Execution</a></span>
                 <span class="session-presenter">Lukas Landgraf (TU Dresden)*; Wolfgang Lehner (TU Dresden); Florian Wolf
-                    (SAP SE); Alexander Boehm (SAP SE)</span>
+                    (SAP SE); Alexander Boehm (SAP SE)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=Dh-F56tsnLc">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
                 <span class="session-time">09:10 - 09:30</span>
                 <span class="session-talk"><a class="link" href="papers/p56-prammer.pdf">Introducing a Query
                         Acceleration Path for Analytics in SQLite3</a></span>
                 <span class="session-presenter">Martin Prammer (University of Wisconsin - Madison)*; Suryadev Sahadevan
                     Rajesh (University of Wisconsin - Madison); Junda Chen (University of Wisconsin-Madison); Jignesh
-                    Patel (UW - Madison)</span>
+                    Patel (UW - Madison)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=c9bQyzm6JRU">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
                 <span class="session-time">09:30 - 09:50</span>
                 <span class="session-talk"> <a class="link" href="papers/p33-klaebe.pdf">Accelerating Python UDFs in
                         Vectorized Query Execution</a></span>
                 <span class="session-presenter">Steffen Kläbe (Actian Corp.)*; Robert DeSantis (Actian Corp); Stefan
-                    Hagedorn (TU Ilmenau); Kai-Uwe Sattler (TU Ilmenau)</span>
+                    Hagedorn (TU Ilmenau); Kai-Uwe Sattler (TU Ilmenau)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=FLatSmSGkk8">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
                 <span class="session-time">09:50 - 10:10</span>
                 <span class="session-talk"><a class="link" href="papers/p81-herlihy.pdf">Boosting Efficiency of External
                         Pipelines by Blurring Application Boundaries</a></span>
                 <span class="session-presenter">Anna Herlihy (EPFL)*; Periklis Chrysogelos (EPFL); Anastasia Ailamaki
-                    (EPFL)</span>
+                    (EPFL)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=8aZSbhZFAMU">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
                 <span class="session-time">10:10 - 10:20</span>
                 <span class="session-talk"><a class="link" href="#">Sponsor Talk by SAP</a></span>
@@ -652,19 +660,25 @@
                         Discovery of Data Dependencies for Query Optimization</a></span>
                 <span class="session-presenter">Jan Kossmann (Hasso Plattner Institute)*; Felix Naumann (Hasso Plattner
                     Institute); Daniel Lindner (Hasso Plattner Institute); Thorsten Papenbrock (Philipps University of
-                    Marburg)</span>
+                    Marburg)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=0yfrcI7XDgc">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
                 <span class="session-time">11:20 - 11:40</span>
                 <span class="session-talk"> <a class="link" href="papers/p6-wu.pdf">A Unified Transferable Model for
                         ML-Enhanced DBMS</a></span>
                 <span class="session-presenter">Ziniu Wu (Massachusetts Institute of Technology)*; Pei Yu (); Peilun
                     Yang (University of Technology Sydney); Rong Zhu (Alibaba Group); Yuxing Han (ByteDance); Yaliang Li
                     (Alibaba Group); Defu Lian (University of Science and Technology of China); Kai Zeng (Alibaba
-                    Group); Jingren Zhou (Alibaba Group)</span>
+                    Group); Jingren Zhou (Alibaba Group)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=u48hBkL8AOM">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
                 <span class="session-time">11:40 - 12:00</span>
                 <span class="session-talk"><a class="link" href="papers/p16-hilprecht.pdf">One Model to Rule them All:
                         Towards Zero-Shot Learning for Databases</a></span>
-                <span class="session-presenter">Benjamin Hilprecht (TU Darmstadt)*; Carsten Binnig (TU Darmstadt)</span>
+                <span class="session-presenter">Benjamin Hilprecht (TU Darmstadt)*; Carsten Binnig (TU Darmstadt)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=s-84ALjPspg">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
                 <span class="session-time">12:00 - 12:20</span>
                 <span class="session-talk"> <a class="link" href="papers/p17-blacher.pdf">Machine Learning, Linear
@@ -672,21 +686,27 @@
                 <span class="session-presenter">Mark Blacher (Friedrich Schiller University Jena)*; Joachim Giesen
                     (Friedrich Schiller University Jena); Sören Laue (Friedrich Schiller University Jena / Data
                     Assessment Solutions GmbH Hannover); Julien Klaus (Friedrich Schiller University Jena); Viktor Leis
-                    (Friedrich-Alexander-Universität Erlangen-Nürnberg)</span>
+                    (Friedrich-Alexander-Universität Erlangen-Nürnberg)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=D584L-oSXkI">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
                 <span class="session-time">12:20 - 12:25</span>
                 <span class="session-talk"><a class="link" href="papers/a37-water.pdf">DataFarm: Farm Your ML-based
                         Query Optimizer’s Food! – Human-Guided Training Data Generation –</a></span>
                 <span class="session-presenter">Robin P. van de Water (TU Berlin)*; Francesco Ventura (TU Berlin); Zoi
                     Kaoudi (TU Berlin); Jorge Arnulfo Quiane Ruiz (TU Berlin); Volker Markl (Technische Universität
-                    Berlin)</span>
+                    Berlin)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=92reCzfglJc">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
                 <span class="session-time">12:25 - 12:30</span>
                 <span class="session-talk"><a class="link" href="papers/p54-zhang.pdf">Can Transfer Learning be used to
                         build a Query Optimizer?</a></span>
                 <span class="session-presenter">Yunjia Zhang (University of Wisconsin-Madison)*; Yannis Chronis
                     (University of Wisconsin Madison); Jignesh Patel (UW - Madison); Theodoros Rekatsinas (University of
-                    Wisconsin-Madison)</span>
+                    Wisconsin-Madison)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=ZeY_RhDISLo">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
             </div>
             <h3 class="time-slot" style="grid-row: time-1230;">12:30pm</h3>
             <div class="session session-4 track-all" style="grid-column: track-all; grid-row: time-1230 / time-1330;">
