--- a/cidr2022/accepted_papers.html
+++ b/cidr2022/accepted_papers.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="CIDR 2022 Program Information/>
+	<meta name="description" content="CIDR 2022 Program Information" />
 	<meta name="keywords" content="your,keywords,goes,here" />
 	<meta name="author" content="Your Name" />
 	<link rel="stylesheet" type="text/css" href="andreas02.css" media="screen,projection" />
