--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="description" content="CIDR 2022 Program Information/>
+    <meta name="description" content="CIDR 2022 Program Information" />
 	<meta name=" keywords" content="your,keywords,goes,here" />
     <meta name="author" content="Your Name" />
     <link rel="stylesheet" type="text/css" href="andreas02.css" media="screen,projection" />
