--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -607,7 +607,7 @@
                         of Query Pipeline Execution</a></span>
                 <span class="session-presenter">Lukas Landgraf (TU Dresden)*; Wolfgang Lehner (TU Dresden); Florian Wolf
                     (SAP SE); Alexander Boehm (SAP SE)
-                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=Dh-F56tsnLc">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=OUCIEcVnO90">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
                 </span>
 
                 <span class="session-time">09:10 - 09:30</span>
