--- a/cidr2022/officers.html
+++ b/cidr2022/officers.html
@@ -103,11 +103,15 @@
         <h3>Local Arrangement Chair</h3>
 		<ul> 
 		<li><b>Kevin Wilkinson</b>, CIDR Foundation</li>
-		<br />
           </ul> 
 
-		
-		
+		<h3>Zoom Chair</h3>
+		  <ul>
+		  <li><b>Gabor Szarnyas</b>, CWI</li>
+		</ul>
+
+		<br />
+
 		<h3>Program Committee</h3>
 		<ul>
 		
