--- a/cidr2023/cfp.html
+++ b/cidr2023/cfp.html
@@ -143,7 +143,7 @@ contributions
 	
 	<div style="background-color: #E6B0AA ; padding: 10px; border: 1px solid red;">
 
-	COVID-19: the conference will be held physically in Chaminade (USA) with on-site presentations. If the situation degrades unexpectedly we might switch to hybrid or virtual, but we hope it does not come to that.</div>
+	COVID-19: the conference will be held physically in Amsterdam (Netherlands) with on-site presentations. If the situation degrades unexpectedly we might switch to hybrid or virtual, but we hope it does not come to that.</div>
 </br>
 
 
