--- a/cidr2023/cfp.html
+++ b/cidr2023/cfp.html
@@ -9,7 +9,7 @@
 	media="screen,projection" />
 <link rel="stylesheet" type="text/css"
 	href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
-<title>CIDR 2022 - Call For Papers</title>
+<title>CIDR 2023 - Call For Papers</title>
 
 <script language="JavaScript">
 
@@ -57,10 +57,10 @@ document.write('</div>');
 
 <div id="header">
 	<h1>
-<a href="index.html">CIDR 2022</a>
+<a href="index.html">CIDR 2023</a>
 	</h1>
 
-<p>January 9-12, 2023        <span style="padding-left:30px">  Chaminade, CA</span></p>
+<p>January 8-12, 2023        <span style="padding-left:30px">  Amsterdam, Netherlands</span></p>
 </div>
 
 <div id="leftside">
