Add time/location of 2023 edition

--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@ CIDR
   <p class=MsoNormal>The first CIDR conference was first held at Asilomar in January 2003, and
   has been held every other January since then. 
   <span style="mso-spacerun:
-  yes">&nbsp;&nbsp; </span> <b> The conference will be held for a twelfth time
-  January 9-12, 2022 in Chaminade, CA. </b> </p>
+  yes">&nbsp;&nbsp; </span> <b> The conference will be held for a thirteenth time
+  between January 8-12, 2023 in Amsterdam, the Netherlands. </b> </p>
   <p class=MsoNormal><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></p>
   </td>
  </tr>
