--- a/cidr2023/cfp.html
+++ b/cidr2023/cfp.html
@@ -60,7 +60,7 @@ document.write('</div>');
 <a href="index.html">CIDR 2023</a>
 	</h1>
 
-<p>January 8-12, 2023        <span style="padding-left:30px">  Amsterdam, Netherlands</span></p>
+<p>January 8-11, 2023        <span style="padding-left:30px">  Amsterdam, Netherlands</span></p>
 </div>
 
 <div id="leftside">
@@ -139,7 +139,7 @@ contributions
 	
 	<div style="background-color: #E6B0AA ; padding: 10px; border: 1px solid red;">
 
-	COVID-19: the conference will be held physically in Amsterdam (Netherlands) with on-site presentations. If the situation degrades unexpectedly we might switch to hybrid or virtual, but we hope it does not come to that.</div>
+COVID-19: the conference will be held physically in Amsterdam (NL) at the Mövenpick Amsterdam with on-site presentations. If the COVID situation degrades unexpectedly we might switch to hybrid or virtual, but we hope it does not come to that.</div>
 </br>
 
 
@@ -150,10 +150,37 @@ contributions
 <p>
 The annual Conference on Innovative Data Systems Research (CIDR) is a systems-oriented conference, complementary in its mission to the mainstream database conferences like SIGMOD and VLDB, emphasizing the systems architecture perspective. CIDR gathers researchers and practitioners from both academia and industry to discuss the latest innovative and visionary ideas in the field.
 
+<p>
+We invite contributions on novel approaches to data management systems, architecture, and usage. CIDR encourages contributions about innovative and risky data management system architecture ideas, systems-building experience and insight, resourceful experimental studies, and provocative position statements. CIDR especially values innovation, experience-based insight, and vision.
+
+<p>
+This year, CIDR invites three kinds of contributions: (a) papers (at most 6 pages). We invite both regular research papers and more visionary papers that promote interesting ideas and ongoing work. To encourage authors to submit only their best work, each person can be an author or co-author of at most two submissions in total of kind a) and b). (b) demos (a video or a description of the demo in at most 6 pages). Authors who feel their work is best captured through a demo should submit a demo proposal. Demos and papers will be interweaved in a single-tracked program. (c) abstracts (at most 1 page). If you have an idea that is too half-baked for a paper or demo proposal, you may submit an abstract. Any author of a paper or demo may additionally submit one abstract. Abstracts are expected to have a single author. Abstracts will be allotted a shorter amount of presentation time than papers and demos, and historically these have been presented in an evening gong show.
+
+<p>
+Abstracts, papers and demos will be reviewed by the program committee, who will select the final program in co-operation with the organizing committee.
+
+<p>
+The number of participants at CIDR is limited to allow an intimate single-track experience. In the past, CIDR reached maximum capacity several weeks before the conference. As in the past, registration for the 2023 conference will be carried out in two phases. Authors who submitted an abstract or co-authored a paper or demo submission are invited to register before October 21th (independent of acceptance). After October 21th, registration is on a first-come-first-serve basis until the conference capacity is reached. So, if you plan to attend the conference, please, submit at least an abstract.
 
 
-	<h3>SUBMISSIONS</h3>
-	<p>TBA
+
+<h3>SUBMISSIONS</h3>
+<p>
+Papers should be electronically submitted in pdf format to <a href="https://cmt3.research.microsoft.com/CIDR2023" >CMT</a>.
+<p>
+Topics of interest include but are not limited to: database systems, storage management, transaction processing, cloud computing, massive data analysis, software service infrastructure, scalability and dependability, embedded and sensor databases, user interfaces, information integration and data cleaning architectures, information retrieval, declarative systems, data management in networks, benchmarking and experimental methodology, and databases for ML and ML for databases. We also welcome submissions on thought-provoking applications and emerging uses of data management technology.
+<p>
+Submissions must be formatted using the ACM SIG style. (see <a href="https://www.acm.org/publications/proceedings-template">ACM Template</a>), and must not exceed SIX pages (for papers and demos) and ONE page (for abstracts) in length. Videos can be submitted in HTML or MPEG format. Submissions will be reviewed by the program committee which will make acceptance and rejection decisions. Final versions of accepted submissions will be published in the electronic proceedings of the CIDR conference. The final versions of accepted papers and demos have no page limit and can be significantly expanded from the submitted form. At least one author of an accepted paper or demo will be expected to attend the conference in order to present the paper. For accepted papers and demos with several co-authors, the program committee reserves the right to select the co-author who should present the paper at the conference as a condition of acceptance.
+<p>
+Abstracts will be published on the CIDR 2023 web page (provided the author agrees). Authors of selected abstracts will be invited to give a 5-minute presentation at the conference.
+
+<h3>Camera Ready Guidelines</h3>
+
+Camera-ready papers need to follow the formatting instructions above. Additionally, they need to include the following copyright notice at the bottom left of the first page. This <a href="cidr-2023.cls" download>latex style file</a> and this <a href="pubform-CIDR2023.docx" download>Word template file</a> include the copyright notice. We recommend that you use it, which will display the following information:
+
+<p>
+This article is published under a Creative Commons Attribution License(http://creativecommons.org/licenses/by/3.0/), which permits distribution and reproduction in any medium as well as allowing derivative works, provided that you attribute the original work to the author(s) and CIDR 2023. 13th Annual Conference on Innovative Data Systems Research (CIDR 2023). January 8-11, 2023, Chaminade, California (USA).
+
 
 </div>
 
