added andy and stefan

--- a/cidr2023/officers.html
+++ b/cidr2023/officers.html
@@ -92,10 +92,17 @@
 
 		</ul> 
 		<p>
-		
+		<h3>Local Arrangement Chair</h3>
+		<ul> 
+		<li><b>Stefan Manegold</b>, CWI</li>
+                                 </ul> 
 		<h3>Website Chair</h3>
 		<ul> 
 		<li><b>Ziawasch Abedjan</b>, Leibniz University Hannover</li>
+                                 </ul> 
+        <h3>Gong Show Master</h3>
+		<ul> 
+		<li><b>Andy Pavlo</b>, CMU</li>
                                  </ul> 
 
 		
