Fix location of 2023 event

--- a/cidr2023/cfp.html
+++ b/cidr2023/cfp.html
@@ -179,7 +179,7 @@ Abstracts will be published on the CIDR 2023 web page (provided the author agree
 Camera-ready papers need to follow the formatting instructions above. Additionally, they need to include the following copyright notice at the bottom left of the first page. This <a href="cidr-2023.cls" download>latex style file</a> and this <a href="pubform-CIDR2023.docx" download>Word template file</a> include the copyright notice. We recommend that you use it, which will display the following information:
 
 <p>
-This article is published under a Creative Commons Attribution License(http://creativecommons.org/licenses/by/3.0/), which permits distribution and reproduction in any medium as well as allowing derivative works, provided that you attribute the original work to the author(s) and CIDR 2023. 13th Annual Conference on Innovative Data Systems Research (CIDR 2023). January 8-11, 2023, Chaminade, California (USA).
+This article is published under a Creative Commons Attribution License(http://creativecommons.org/licenses/by/3.0/), which permits distribution and reproduction in any medium as well as allowing derivative works, provided that you attribute the original work to the author(s) and CIDR 2023. 13th Annual Conference on Innovative Data Systems Research (CIDR 2023). January 8-11, 2023, Amsterdam, Netherlands.
 
 
 </div>
