--- a/cidr2023/index.html
+++ b/cidr2023/index.html
@@ -115,7 +115,7 @@ document.write('</div>');
 		<h2>General information</h2>
 		<p>
 		  The  Conference on Innovative Data Systems Research (CIDR) is a systems-oriented conference, complementary in its mission to the mainstream database conferences like SIGMOD and VLDB, emphasizing the systems architecture perspective. 
-		  CIDR was run every two years starting 2003, becoming the premier conference for practical data systems work. From 2020 on, the conference is organized every year, alternating between Amsterdam (even years) and the USA (odd years).  
+		  CIDR was run every two years starting 2003, becoming the premier conference for practical data systems work. From 2020 on, the conference is organized every year, alternating between Amsterdam and the USA.
 		  CIDR 2023 will be held in Amsterdam. The venue of the conference is the Mövenpick hotel on the waterfront of the Amsterdam city center.
 		  	<p>
 		The CIDR program consists of single-track keynote, paper and demo presentations. There are also evening sessions, including a lively gong show, and plenty of time for interaction among the delegates, who are researchers and practitioners from both academia and industry. CIDR encourages papers about innovative and risky data management system architecture ideas, systems-building experience and insight, resourceful experimental studies, and provocative position statements. Papers are encouraged to present novel approaches to data systems architecture and usage, to inspire discussions on the latest innovative and visionary ideas in the field. Authors are encouraged to submit their best systems work, and are limited to submit at most two papers.
