--- a/cidr2023/index.html
+++ b/cidr2023/index.html
@@ -57,7 +57,7 @@ document.write('</div>');
 
 	<div id="header">
 		<h1><a href="index.html">CIDR 2023</a></h1>
-		<p>January 8-11, 2023        <span style="padding-left:30px">  Amsterdam, Netherlands</span></p>
+		<p>January 8-11, 2023        <span style="padding-left:30px">  Amsterdam, The Netherlands</span></p>
 	</div>
 
 <!--
