--- a/cidr2023/cfp.html
+++ b/cidr2023/cfp.html
@@ -122,7 +122,7 @@ document.write('</div>');
 <dl>
 	<dt>
 	
-<strong> August 19, 2022</strong>: Submission deadline for all
+<strong>August 19, 2022</strong>: submission deadline for all
 contributions
 	<dt>
 <strong>October 14, 2022</strong>: author notification for all contributions
