--- a/cidr2023/cfp.html
+++ b/cidr2023/cfp.html
@@ -122,10 +122,10 @@ document.write('</div>');
 <dl>
 	<dt>
 	
-<strong>August 19, 2022</strong>: submission deadline for all
+<strong><strike>August 19</strike> <font style="color:red">September 02</font>, 2022</strong>: submission deadline for all
 contributions
 	<dt>
-<strong>October 14, 2022</strong>: author notification for all contributions
+<strong><strike>October 14</strike> <font style="color:red">October 28 </font>, 2022</strong>: author notification for all contributions
 
 <dt>
 	<strong>December 9, 2022</strong>: camera-ready deadline for
