added D&I and page limit
with regard to references.

--- a/cidr2023/cfp.html
+++ b/cidr2023/cfp.html
@@ -170,7 +170,7 @@ Papers should be electronically submitted in pdf format to <a href="https://cmt3
 <p>
 Topics of interest include but are not limited to: database systems, storage management, transaction processing, cloud computing, massive data analysis, software service infrastructure, scalability and dependability, embedded and sensor databases, user interfaces, information integration and data cleaning architectures, information retrieval, declarative systems, data management in networks, benchmarking and experimental methodology, and databases for ML and ML for databases. We also welcome submissions on thought-provoking applications and emerging uses of data management technology.
 <p>
-Submissions must be formatted using the ACM SIG style. (see <a href="https://www.acm.org/publications/proceedings-template">ACM Template</a>), and must not exceed SIX pages (for papers and demos) and ONE page (for abstracts) in length. Videos can be submitted in HTML or MPEG format. Submissions will be reviewed by the program committee which will make acceptance and rejection decisions. Final versions of accepted submissions will be published in the electronic proceedings of the CIDR conference. The final versions of accepted papers and demos have no page limit and can be significantly expanded from the submitted form. At least one author of an accepted paper or demo will be expected to attend the conference in order to present the paper. For accepted papers and demos with several co-authors, the program committee reserves the right to select the co-author who should present the paper at the conference as a condition of acceptance.
+Submissions must be formatted using the ACM SIG style. (see <a href="https://www.acm.org/publications/proceedings-template">ACM Template</a>), and must not exceed SIX pages (for papers and demos) and ONE page (for abstracts) in length including all references and appendix. Videos can be submitted in HTML or MPEG format. Submissions will be reviewed by the program committee which will make acceptance and rejection decisions. Final versions of accepted submissions will be published in the electronic proceedings of the CIDR conference. The final versions of accepted papers and demos have no page limit and can be significantly expanded from the submitted form. At least one author of an accepted paper or demo will be expected to attend the conference in order to present the paper. For accepted papers and demos with several co-authors, the program committee reserves the right to select the co-author who should present the paper at the conference as a condition of acceptance.
 <p>
 Abstracts will be published on the CIDR 2023 web page (provided the author agrees). Authors of selected abstracts will be invited to give a 5-minute presentation at the conference.
 
@@ -182,7 +182,15 @@ Camera-ready papers need to follow the formatting instructions above. Additional
 This article is published under a Creative Commons Attribution License(http://creativecommons.org/licenses/by/3.0/), which permits distribution and reproduction in any medium as well as allowing derivative works, provided that you attribute the original work to the author(s) and CIDR 2023. 13th Annual Conference on Innovative Data Systems Research (CIDR 2023). January 8-11, 2023, Amsterdam, The Netherlands.
 
 
+<h3>Diversity and Inclusion</h3>
+ 
+As a large scientific and technical community that has a direct impact on many people from different backgrounds around the world, Diversity and Inclusion (D&I) are crucial for the data management community. Please refer to <a href="https://dbdni.github.io/">D&I in DB</a> for the details of the coordinated D&I efforts across the data management community.
+ 
+As a major conference in the data management community, CIDR deeply cares about D&I and we believe that paper writing can make a material difference. So, we would like to strongly plead with the authors to follow the <a href="https://dbdni.github.io/pages/inclusivewriting.html">D&I writing instructions</a> when drafting the paper submissions.
 </div>
+
+
+
 
 <div id="footer">
 	<p>
