Update main page

--- a/index.html
+++ b/index.html
@@ -152,37 +152,26 @@ div.Section1
   provide the database community with a venue for presenting innovative data
   systems architectures, as well as a prestigious publication opportunity. 
 
-		  CIDR is complementary in its mission to the mainstream 
-		  database conferences like SIGMOD and VLDB, emphasizing the systems architecture 
-		  perspective. CIDR gathers researchers and practitioners from both academia 
-		  and industry to discuss the latest innovative and visionary ideas in the field.
+  CIDR is complementary in its mission to the mainstream 
+  database conferences like SIGMOD and VLDB, emphasizing the systems architecture 
+  perspective. CIDR gathers researchers and practitioners from both academia 
+  and industry to discuss the latest innovative and visionary ideas in the field.
 
-		  CIDR mainly encourages papers about
-		  innovative and risky data management system architecture ideas, 
-		  systems-building experience and insight, 
-		  resourceful experimental studies, 
-		  provocative position statements. 
-		  CIDR especially values innovation, experience-based insight, and vision.
+  CIDR mainly encourages papers about
+  innovative and risky data management system architecture ideas, 
+  systems-building experience and insight, 
+  resourceful experimental studies, 
+  provocative position statements. 
+  CIDR especially values innovation, experience-based insight, and vision.
 
-<!--
-CIDR
-  does not compete with the established conferences presenting rigorous
-  treatises in established areas; rather its goal is to air radically new
-  ideas. Such papers are typically speculative or are system evaluations. The
-  visionary papers usually lack rigorous frameworks, simulations of
-  performance, or prototype implementations but present a radical departure
-  from conventional approaches that enable new applications. The prototype
-  descriptions generally are a detailed report on successes and mistakes. The
-  other major DBMS conferences usually reject such submissions because they are
-  not scientific. However, these are often the very papers that offer long-term
-  value to the field, and should be widely disseminated.--> </p>
 
   <p class=MsoNormal><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></p>
   <p class=MsoNormal>The first CIDR conference was first held at Asilomar in January 2003, and
-  has been held every other January since then. 
+  has been held every other January for the first 18 years. Since 2020, the conference has a
+  yearly cadence alternating between California and Amsterdam.
   <span style="mso-spacerun:
-  yes">&nbsp;&nbsp; </span> <b> The conference will be held for a thirteenth time
-  between January 8-11, 2023 in Amsterdam, the Netherlands. </b> </p>
+  yes">&nbsp;&nbsp; </span> <b> The conference will be held for a fourteenth time
+  between January 14-17, 2024 in Chaminade, California. </b> </p>
   <p class=MsoNormal><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></p>
   </td>
  </tr>
@@ -218,7 +207,7 @@ CIDR
   none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
   mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
   padding:0in 5.4pt 0in 5.4pt'>
-  <p class=MsoNormal>Call for papers (TBA)</p></td>
+  <p class=MsoNormal><a href="https://www.cidrdb.org/cidr2024/cfp.html">Call for papers</a></p></td>
   <td width=148 valign=top style='width:2.05in;border-top:none;border-left:
   none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
   mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
