--- a/cidr2021/program.html
+++ b/cidr2021/program.html
@@ -257,7 +257,7 @@ Snowflake Data Cloud</a></span>
         <span class="session-location">Location: Zoom</span>
         <span class="session-time">7:00 - 7:15</span>
 		<span class="session-talk"><a class = "link" href="papers/cidr2021_paper16.pdf">New Directions in Cloud Programming</a></span>
-        <span class="session-presenter">Alvin Cheung (UC Berkeley), Natacha Crooks (UC Berkeley), Joseph M. Hellerstein (UC Berkeley), Matthew Milano (UC Berkeley)
+        <span class="session-presenter">Alvin Cheung (UC Berkeley), Natacha Crooks (UC Berkeley), Joseph M. Hellerstein (UC Berkeley), Mae Milano (UC Berkeley)
         <button class = "link" style="color:black"><a href="https://www.youtube.com/watch?v=FeRg-7Sr1L8">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
         </span>
         
