Add CIDR 2024 proceedings

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ div.Section1
   none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
   mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
   padding:0in 5.4pt 0in 5.4pt'>
-  <p class=MsoNormal><a href="https://www.cidrdb.org/cidr2024/cfp.html">Call for papers</a></p></td>
+  <p class=MsoNormal><a href="cidr2024/cidr2024proceedings.zip">Call for papers</a></p></td>
   <td width=148 valign=top style='width:2.05in;border-top:none;border-left:
   none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
   mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
