--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@ div.Section1
   has been held every other January for the first 18 years. Since 2020, the conference has a
   yearly cadence alternating between California and Amsterdam.
   <span style="mso-spacerun:
-  yes">&nbsp;&nbsp; </span> <b> The conference will be held for a fourteenth time
-  between January 14-17, 2024 in Chaminade, California. </b> </p>
+  yes">&nbsp;&nbsp; </span> <b> The conference will be held for a fifteenth time
+  between January 19-22, 2025 in Amsterdam, the Netherlands. </b> </p>
   <p class=MsoNormal><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></p>
   </td>
  </tr>
