--- a/fbb0e34aceae2304dc7a1aeba89c21c6180654d7/index.html
+++ b/fbb0e34aceae2304dc7a1aeba89c21c6180654d7/index.html
@@ -1,1 +1,9 @@
-2024/index.html
+<!DOCTYPE html>
+<html>
+  <head>
+    <script>window.location.href = './2024/index.html';</script>
+  </head>
+  <body>
+    <p>Redirecting...</p>
+  </body>
+</html>
