--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ div.Section1
    height:325pt'>
    <v:imagedata src="index_files/image001.jpg" o:title="title.jpg"/>
   </v:shape><![endif]--><![if !vml]><img width=433 height=325
-  src="index_files/image001.jpg" alt="Software: Microsoft Office" v:shapes="_x0000_i1025"><![endif]></p>
+  src="logo.png" "><![endif]></p>
   <p class=MsoNormal><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></p>
   </td>
  </tr>
