--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ div.Section1
   </v:shapetype><v:shape id="_x0000_i1025" type="#_x0000_t75" style='width:433pt;
    height:325pt'>
    <v:imagedata src="index_files/image001.jpg" o:title="title.jpg"/>
-  </v:shape><![endif]--><![if !vml]><img width=433 height=325
+  </v:shape><![endif]--><![if !vml]><img height=200
   src="logo.png" "><![endif]></p>
   <p class=MsoNormal><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></p>
   </td>
